--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: arial, sans-serif;
+    background-color: #F5F5DC;
   }
   
   h1 {
@@ -73,10 +74,8 @@ body {
     text-decoration: none;
   }
   
-  .weather-forecast {
-    margin-top: 20px;
-    text-align: center;
-    color: #000;
+  footer {
+   font-style: italic;
   }
   
   
